# Docs

fastAPI-docs/: mkdocs.yml  pyproject.toml
fastAPI-docs/docs/: ambiente.md  crud.md  index.md  introdução_web.md
fastAPI-docs/docs/stylesheets/: extra.css
