[tool.poetry]
name = "fastapi-docs"
version = "0.1.0"
description = ""
authors = ["DanielDlc <dlc.engcomputacao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
pymdown-extensions = "^10.0"
mkdocs-macros-plugin = "^0.5.12"
mkdocs-glightbox = "^0.2.0"
mkdocs-git-authors-plugin = "^0.3.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.2"
mkdocs-with-pdf = "^0.7.0"
mkdocs-exclude = "^1.0.2"
mkdocs-exclude-unused-files = "^1.0.1"
mkdocs-markdownextradata-plugin = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
